--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,11 +21,11 @@ section{
 }
 
 .mainLogo{
-  margin-bottom: -70px
+  margin-bottom: -70px;
 }
 
 .callToAction{
-  margin-top: -150px
+  margin-top: -150px;
 }
 
 .callToAction .btn{
