--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,7 +16,7 @@ section{
 }
 
 .headerBG{
-  background: url('rancher.github.io/resources/img/cloudBG.png') no-repeat;
+  background: url('https://christianbradshaw.github.io/rancher.github.io/resources/img/tumblrLogo.png') no-repeat;
   height: 50vh;
 }
 
